--- a/index.html
+++ b/index.html
@@ -6,5 +6,7 @@
     </head>
     <body>
         <h3>hi</h3>
+        <div id='thirsty'></div>
+        <script src='./main.js'></script>
     </body>
 </html>
